test/errors/auto_field_no_default.haste
const S = struct {
    x: auto;
};
